--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <title>Rick and Morty</title>
   </head>
 
   <body>
